--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,32 @@
     transform: translateY(0);
   }
 }
+
+input[type="range"] {
+  -webkit-appearance: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 300px;
+  height: 5px;
+  @apply bg-pi-offwhite-main;
+  border-radius: 3px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  @apply bg-pi-purple-main;
+  @apply cursor-pointer;
+  @apply mt-[-5px];
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  @apply bg-pi-offwhite-main;
+}
