--- a/app/globals.css
+++ b/app/globals.css
@@ -2,35 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+@media (max-width: 640px) {
+  .sidebar {
+    display: none;
+  }
+  .bottom-bar {
+    display: flex;
+  }
+}
+
+/* @layer base {
   :root {
     --background: 200 20% 98%;
     --btn-background: 200 10% 91%;
     --btn-background-hover: 200 10% 89%;
     --foreground: 200 50% 3%;
   }
-
-  @media (prefers-color-scheme: dark) {
+} */
+/* @media (prefers-color-scheme: dark) {
     :root {
       --background: 200 50% 3%;
       --btn-background: 200 10% 9%;
       --btn-background-hover: 200 10% 12%;
       --foreground: 200 20% 96%;
     }
-  }
-}
-
-@layer base {
-  * {
-    @apply border-foreground/20;
-  }
-}
-
-.animate-in {
+  } */
+/* .animate-in {
   animation: animateIn 0.3s ease 0.15s both;
-}
+} */
 
-@keyframes animateIn {
+/* @keyframes animateIn {
   from {
     opacity: 0;
     transform: translateY(10px);
@@ -39,20 +40,20 @@
     opacity: 1;
     transform: translateY(0);
   }
-}
+} */
 
-input[type="range"] {
+/* input[type="range"] {
   -webkit-appearance: none;
-}
+} */
 
-input[type="range"]::-webkit-slider-runnable-track {
+/* input[type="range"]::-webkit-slider-runnable-track {
   width: 300px;
   height: 5px;
   @apply bg-pi-offwhite-main;
   border-radius: 3px;
-}
+} */
 
-input[type="range"]::-webkit-slider-thumb {
+/* input[type="range"]::-webkit-slider-thumb {
   border: none;
   height: 16px;
   width: 16px;
@@ -60,12 +61,18 @@ input[type="range"]::-webkit-slider-thumb {
   @apply bg-pi-purple-main;
   @apply cursor-pointer;
   @apply mt-[-5px];
-}
+} */
 
-input[type="range"]:focus {
+/* input[type="range"]:focus {
   outline: none;
 }
 
 input[type="range"]:focus::-webkit-slider-runnable-track {
   @apply bg-pi-offwhite-main;
-}
+} */
+
+/* @layer base {
+  * {
+    @apply border-foreground/20;
+  }
+} */
