update: basic layout refactor for responsiveness

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   .sidebar {
     display: none;
   }
   .bottom-bar {
     display: flex;
   }
-}
+} */
 
 /* @layer base {
   :root {
