update: updated styling for better content scrolling and modal style

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,77 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @media (max-width: 640px) {
-  .sidebar {
-    display: none;
-  }
-  .bottom-bar {
-    display: flex;
-  }
-} */
-
-/* @layer base {
-  :root {
-    --background: 200 20% 98%;
-    --btn-background: 200 10% 91%;
-    --btn-background-hover: 200 10% 89%;
-    --foreground: 200 50% 3%;
-  }
-} */
-/* @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 200 50% 3%;
-      --btn-background: 200 10% 9%;
-      --btn-background-hover: 200 10% 12%;
-      --foreground: 200 20% 96%;
-    }
-  } */
-/* .animate-in {
-  animation: animateIn 0.3s ease 0.15s both;
-} */
-
-/* @keyframes animateIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-} */
-
-/* input[type="range"] {
-  -webkit-appearance: none;
-} */
-
-/* input[type="range"]::-webkit-slider-runnable-track {
-  width: 300px;
-  height: 5px;
-  @apply bg-pi-offwhite-main;
-  border-radius: 3px;
-} */
-
-/* input[type="range"]::-webkit-slider-thumb {
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  @apply bg-pi-purple-main;
-  @apply cursor-pointer;
-  @apply mt-[-5px];
-} */
-
-/* input[type="range"]:focus {
-  outline: none;
+html,
+body {
+  @apply m-0;
+  @apply p-0;
+  @apply h-full;
 }
 
-input[type="range"]:focus::-webkit-slider-runnable-track {
-  @apply bg-pi-offwhite-main;
-} */
+body {
+  @apply overflow-hidden;
+}
 
-/* @layer base {
-  * {
-    @apply border-foreground/20;
-  }
-} */
+main {
+  @apply overflow-y-auto;
+}
+
+::-webkit-scrollbar-track {
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+  border-radius: 10px;
+  @apply bg-pi-offwhite-main;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  @apply bg-pi-offwhite-shadow;
+}
